--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-slick": "^0.23.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-slick": "^0.27.3",
     "styled-components": "^5.1.1"
   },
   "scripts": {
